[project]
name = "gdpr_auditor_env"
version = "1.0.0"
description = "GDPR Compliance Auditor - Detect privacy policy violations"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "python-dotenv",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
server = "server.app:main"

[tool.uv]
dev-dependencies = []
